[metadata]
name = srcom.py
version = 0.0.1
author = Zaxutic
author_email = zax@zaxu.xyz
license = MIT
description = A python wrapper for the speedrun.com API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zaxutic/srcom.py
project_urls =
    Bug Tracker = https://github.com/zaxutic/srcom.py/issues
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
packages =
    srcom
python_requires = >=3.6
